Fix editor styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ header a {
   position: relative;
   background-color: #fff;
   z-index: 1;
-  padding: 0 10px;
+  padding: 5px 10px;
   border: 1px solid lightgray;
   border-radius: 10px;
   box-shadow: 2px 2px lightgray;
@@ -100,7 +100,7 @@ header a {
 
 .input-btn-wrapper input:nth-of-type(1) {
   position: relative;
-  top: -1.2rem;
+  top: -0.9rem;
   background-color: lightgreen;
   border: 1px solid lightgreen;
   border-radius: 20px;
